--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #ff6879;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,8 +29,10 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 4rem;
   line-height: 1.1;
+  font-family: "Rubik Doodle Shadow";
+  text-align: center;
 }
 
 button {
